some color updates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>
     <div class="name">
       <b>
-        <p>tahaseen<br>طحسین<br>తహసీన్</p>
+        <p>tahaseen<br>تحسین<br>తహసీన్</p>
       </b>
       <a href="https://www.linkedin.com/in/tashaik">
         <img src="./static/linkedin.png" width="50" height="50" alt="linkedin" align="right">
