--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   
   <body scroll="no">
-    <div class="tile">
-      <img src="./static/tile-big.png" alt="tile">
-    </div>
+    <div class="tile"></div>
     <div class="hamburger" id="hamburger">☰</div>
     <nav class="menu" id="menu">
     </nav>
