added references to projects

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="tile"></div>
     <div class="hamburger" id="hamburger">☰</div>
     <nav class="menu" id="menu">
+      <a href="/air-modular-drone">AIR: Modular Drone</a>
+      <a href="/gateways-blue-skies-comp">NASA Gateways to Blue Skies</a>
     </nav>
     <div class="name">
       <b>
